project(miniaudio_examples VERSION 0.1.0)

if(SUPPORT_PLAYBACK)
MESSAGE(STATUS "##### building simple playback")
add_executable(simple_playback simple_playback.c)
target_include_directories(simple_playback PRIVATE ${PROJECT_SOURCE_DIR})
target_link_libraries(simple_playback PRIVATE dl m miniaudio)
endif()

if(SUPPORT_PLAYBACK_SINE)
MESSAGE(STATUS "##### building simple_playback_sine")
add_executable(simple_playback_sine simple_playback_sine.c)
target_include_directories(simple_playback_sine PRIVATE ${PROJECT_SOURCE_DIR})
target_link_libraries(simple_playback_sine PRIVATE dl m miniaudio)
endif()